--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
   }
 }
 
+.active{
+  background-color: gainsboro;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
